exports[`invalid(1): .element { height: 100vh; width: 100vw; } 1`] = `

  1 | .element { height: 100vh; width: 100vw; }

`;

exports[`invalid(1): .element { height: 100vh; width: 100vw; } 2`] = `

Message:
> 1 | .element { height: 100vh; width: 100vw; }
    |                    ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: 100dvh; width: 100vw; }

`;

exports[`invalid(1): .element { height: 100vh; width: 100vw; } 3`] = `

Message:
> 1 | .element { height: 100vh; width: 100vw; }
    |                                  ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { height: 100vh; width: 100dvw; }

`;

exports[`invalid(1): .large { height: 100vh; width: 100vw; } 1`] = `

Options:
- unit: 'lvh'

Code:
  1 | .large { height: 100vh; width: 100vw; }

`;

exports[`invalid(1): .large { height: 100vh; width: 100vw; } 2`] = `

Message:
> 1 | .large { height: 100vh; width: 100vw; }
    |                  ^^^^^ Prefer \`100lvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100lvh\`.:
  1 | .large { height: 100lvh; width: 100vw; }

`;

exports[`invalid(1): .large { height: 100vh; width: 100vw; } 3`] = `

Message:
> 1 | .large { height: 100vh; width: 100vw; }
    |                                ^^^^^ Prefer \`100lvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100lvw\`.:
  1 | .large { height: 100vh; width: 100lvw; }

`;

exports[`invalid(1): .small { height: 100vh; width: 100vw; } 1`] = `

Options:
- unit: 'svh'

Code:
  1 | .small { height: 100vh; width: 100vw; }

`;

exports[`invalid(1): .small { height: 100vh; width: 100vw; } 2`] = `

Message:
> 1 | .small { height: 100vh; width: 100vw; }
    |                  ^^^^^ Prefer \`100svh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100svh\`.:
  1 | .small { height: 100svh; width: 100vw; }

`;

exports[`invalid(1): .small { height: 100vh; width: 100vw; } 3`] = `

Message:
> 1 | .small { height: 100vh; width: 100vw; }
    |                                ^^^^^ Prefer \`100svw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100svw\`.:
  1 | .small { height: 100vh; width: 100svw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 1`] = `

  1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 2`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                        ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { min-height: 100dvh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 3`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                                           ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { min-height: 100vh; max-height: 100dvh; min-width: 100vw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 4`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                                                             ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100dvw; max-width: 100vw; }

`;

exports[`invalid(2): .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; } 5`] = `

Message:
> 1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100vw; }
    |                                                                               ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { min-height: 100vh; max-height: 100vh; min-width: 100vw; max-width: 100dvw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 1`] = `

  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 2`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                        ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { block-size: 100dvh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 3`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                               ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { block-size: 100vh; min-block-size: 100dvh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 4`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                      ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100dvh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 5`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                                          ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100dvw; min-inline-size: 100vw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 6`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                                                                  ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100dvw; max-inline-size: 100vw; }

`;

exports[`invalid(3): .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; } 7`] = `

Message:
> 1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100vw; }
    |                                                                                                                                          ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { block-size: 100vh; min-block-size: 100vh; max-block-size: 100vh; inline-size: 100vw; min-inline-size: 100vw; max-inline-size: 100dvw; }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 1`] = `

  1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 2`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                         ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100dvh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 3`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                                                   ^^^^^ Prefer \`100dvw\` over \`100vw\`.

Suggestion 1/1: Replace \`100vw\` with \`100dvw\`.:
  1 | .element { height: calc(100vh - 1rem); width: min(100dvw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 4`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                                                                                           ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100dvh /* fill */, 100vh); }

`;

exports[`invalid(4): .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); } 5`] = `

Message:
> 1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100vh); }
    |                                                                                                             ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .element { height: calc(100vh - 1rem); width: min(100vw, 80rem); block-size: clamp(20rem, 100vh /* fill */, 100dvh); }

`;

exports[`invalid(5): .uppercase { min-height: 100.0VH; WIDTH: 100VW; } 1`] = `

  1 | .uppercase { min-height: 100.0VH; WIDTH: 100VW; }

`;

exports[`invalid(5): .uppercase { min-height: 100.0VH; WIDTH: 100VW; } 2`] = `

Message:
> 1 | .uppercase { min-height: 100.0VH; WIDTH: 100VW; }
    |                          ^^^^^^^ Prefer \`100.0dvh\` over \`100.0VH\`.

Suggestion 1/1: Replace \`100.0VH\` with \`100.0dvh\`.:
  1 | .uppercase { min-height: 100.0dvh; WIDTH: 100VW; }

`;

exports[`invalid(5): .uppercase { min-height: 100.0VH; WIDTH: 100VW; } 3`] = `

Message:
> 1 | .uppercase { min-height: 100.0VH; WIDTH: 100VW; }
    |                                          ^^^^^ Prefer \`100dvw\` over \`100VW\`.

Suggestion 1/1: Replace \`100VW\` with \`100dvw\`.:
  1 | .uppercase { min-height: 100.0VH; WIDTH: 100dvw; }

`;

exports[`invalid(6): .scientific { height: 1e2vh; } 1`] = `

  1 | .scientific { height: 1e2vh; }

`;

exports[`invalid(6): .scientific { height: 1e2vh; } 2`] = `

Message:
> 1 | .scientific { height: 1e2vh; }
    |                       ^^^^^ Prefer \`1e2dvh\` over \`1e2vh\`.

Suggestion 1/1: Replace \`1e2vh\` with \`1e2dvh\`.:
  1 | .scientific { height: 1e2dvh; }

`;

exports[`invalid(7): .fallback { height: 100vh; height: 100dvh; } 1`] = `

  1 | .fallback { height: 100vh; height: 100dvh; }

`;

exports[`invalid(7): .fallback { height: 100vh; height: 100dvh; } 2`] = `

Message:
> 1 | .fallback { height: 100vh; height: 100dvh; }
    |                     ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | .fallback { height: 100dvh; height: 100dvh; }

`;

exports[`invalid(8): @supports (height: 100dvh) { .element { height: 100vh; } } 1`] = `

  1 | @supports (height: 100dvh) { .element { height: 100vh; } }

`;

exports[`invalid(8): @supports (height: 100dvh) { .element { height: 100vh; } } 2`] = `

Message:
> 1 | @supports (height: 100dvh) { .element { height: 100vh; } }
    |                                                 ^^^^^ Prefer \`100dvh\` over \`100vh\`.

Suggestion 1/1: Replace \`100vh\` with \`100dvh\`.:
  1 | @supports (height: 100dvh) { .element { height: 100dvh; } }

`;
